updated wordcount changes

--- a/index.html
+++ b/index.html
@@ -1267,10 +1267,13 @@
                               <!-- Content -->
                               <div class="reviews-msg">
                                 <p class="light-italic info-margin">
-                                  Dashandots Technology delivered on time,
-                                  within budget, and their support has been
-                                  excellent. We've seen great efficiency
-                                  improvements. Highly recommend!
+                                  We had an outstanding experience working with Dashandots Technology.
+                                   They not only delivered our project on time but also ensured that
+                                    everything was completed within the agreed budget, without any
+                                     hidden costs. Their customer support has been exceptional, always
+                                      available to address our concerns promptly and efficiently.
+                                       Since implementing their solutions, we have noticed significant 
+                                       improvements in our operational efficiency and overall business performance. 
                                 </p>
                               </div>
                               <!-- Author Info -->
@@ -1309,10 +1312,14 @@
                               <!-- Content -->
                               <div class="reviews-msg">
                                 <p class="light-italic info-margin">
-                                  Dashandots Technology met our deadlines and
-                                  stayed within budget. Their support has been
-                                  exceptional, and we've noticed a significant
-                                  boost in productivity. Highly recommend!
+                                  We had an amazing experience working with Dashandots Technology.
+                                   They not only met all our project deadlines efficiently but also
+                                    ensured that everything stayed well within our budget, making 
+                                    the entire process smooth and hassle-free. Their customer support 
+                                    has been truly exceptional, always responsive, professional, and
+                                     ready to assist us whenever needed. Since partnering with them, 
+                                     we have noticed a significant boost in our overall productivity, 
+                                     efficiency, and workflow management.
                                 </p>
                               </div>
                               <!-- Author Info -->
@@ -1351,10 +1358,12 @@
                               <!-- Content -->
                               <div class="reviews-msg">
                                 <p class="light-italic info-margin">
-                                  Dashandots Technology provided exactly what we
-                                  needed, on schedule and within our budget.
-                                  Their support has been outstanding, and our
-                                  operations have improved noticeably.
+                                  Dashandots Technology exceeded our expectations by delivering 
+                                  exactly what we needed, right on schedule and well within our 
+                                  budget. Their team demonstrated exceptional professionalism, 
+                                  technical expertise, and a deep understanding of our business 
+                                  requirements. The entire development process was smooth, 
+                                  efficient, and hassle-free.
                                 </p>
                               </div>
                               <!-- Author Info -->
@@ -1426,11 +1435,14 @@
                     </p>
                     <!-- Description -->
                     <h3 class="section-msg text-center color-black">
-                      At Dashandots Technology Pvt. Ltd., we provide a
-                      comprehensive range of services designed to meet the
-                      diverse needs of our clients and students. Explore how we
-                      can help you achieve your technology goals and enhance
-                      your skills.
+                      At Dashandots Technology Pvt. Ltd., we are committed to
+                       delivering a comprehensive range of technology-driven 
+                       services tailored to meet the diverse needs of businesses, 
+                       entrepreneurs, and students alike. Our expert team specializes 
+                       in providing cutting-edge solutions that empower businesses to 
+                       thrive in the digital landscape while equipping students with 
+                       the necessary skills to excel in the competitive tech industry.
+
                     </h3>
                   </div>
                   <!-- Services Right Info Ends -->
