--- a/food.html
+++ b/food.html
@@ -664,7 +664,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 </div>
             </div>
             <div class="features-image animate-on-scroll">
-                <img src="/images/food_story.jpeg" alt="Feature Rich Dashboard">
+                <img src="/images/food_demo.jpeg" alt="Feature Rich Dashboard">
                 <div class="floating floating-3"></div>
                 <div class="floating floating-4"></div>
             </div>
