--- a/food.html
+++ b/food.html
@@ -597,7 +597,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
-                <img src="/images/food_demo.jpg" alt="Food App Mockup">
+                <img src="/images/food_dashboard.png" alt="Food App Mockup">
             </div>
         </div>
     </div>
