--- a/tour.html
+++ b/tour.html
@@ -600,7 +600,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                         <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
                     </div>
                     <div class="hero-image animate-on-scroll">
-                        <img src="/images/tour_demo.jpeg" alt="Health App Mockup">
+                        <img src="/images/tour_dash1.jpeg" alt="Health App Mockup">
                     </div>
                 </div>
             </div>
@@ -676,7 +676,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 </div>
             </div>
             <div class="features-image animate-on-scroll">
-                <img src="/images/tour_dash.jpeg" alt="Travel Solutions for Businesses">
+                <img src="/images/tour_dash2.jpeg" alt="Travel Solutions for Businesses">
                 <div class="floating floating-3"></div>
                 <div class="floating floating-4"></div>
             </div>
@@ -720,7 +720,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                                     </ul>
                                 </div>
                                 <div class="slide-image">
-                                    <img src="https://via.placeholder.com/400x300?text=GourmetGo+Success" alt="GourmetGo Success Story">
+                                    <img src="/images/tour_story.jpeg" alt="GourmetGo Success Story">
                                 </div>
                             </div>
                         </div>
@@ -737,7 +737,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                                 </div>
                                 <div class="slide-image">
-                                    <img src="https://via.placeholder.com/400x300?text=QuickBite+Success" alt="QuickBite Success Story">
+                                    <img src="/images/tour_story.jpeg" alt="QuickBite Success Story">
                                 </div>
                             </div>
                         </div>
@@ -754,7 +754,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                                     </ul>
                                             </div>
                                             <div class="slide-image">
-                                    <img src="https://via.placeholder.com/400x300?text=TechMobile+Success" alt="TechMobile Success Story">
+                                    <img src="/images/tour_story.jpeg" alt="TechMobile Success Story">
                                 </div>
                             </div>
                         </div>
