--- a/Salons.html
+++ b/Salons.html
@@ -675,7 +675,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 </div>
             </div>
             <div class="features-image animate-on-scroll">
-                <img src="/images/salon_dash.jpeg" alt="Feature Rich Dashboard">
+                <img src="/images/salon_dash1.jpeg" alt="Feature Rich Dashboard">
                 <div class="floating floating-3"></div>
                 <div class="floating floating-4"></div>
             </div>
