--- a/health.html
+++ b/health.html
@@ -674,7 +674,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 </div>
             </div>
             <div class="features-image animate-on-scroll">
-                <img src="/images/health_dash.jpeg" alt="Feature Rich Dashboard">
+                <img src="/images/pharma_dash1.avif" alt="Feature Rich Dashboard">
                 <div class="floating floating-3"></div>
                 <div class="floating floating-4"></div>
             </div>
