--- a/pharma.html
+++ b/pharma.html
@@ -708,7 +708,7 @@
                 </div>
             </div>
             <div class="features-image animate-on-scroll">
-                <img src = "/images/pharma_dash.jpeg" alt="Feature Rich Dashboard">
+                <img src = "/images/pharma_dash1.avif" alt="Feature Rich Dashboard">
                 <div class="floating floating-3"></div>
                 <div class="floating floating-4"></div>
             </div>
