--- a/avr.html
+++ b/avr.html
@@ -597,7 +597,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Embedded Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
-                <img src="/images/mcu_board.jpg" alt="AVR/PIC Development Board">
+                <img src="/images/lamp_demo.jpg" alt="AVR/PIC Development Board">
             </div>
         </div>
     </div>
@@ -673,7 +673,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 </div>
             </div>
             <div class="features-image animate-on-scroll">
-                <img src="/images/firmware_ide.jpg" alt="Embedded Development Environment">
+                <img src="/images/lamp_dash.jpg" alt="Embedded Development Environment">
                 <div class="floating floating-3"></div>
                 <div class="floating floating-4"></div>
             </div>
@@ -699,7 +699,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/industrial_control.jpg" alt="Industrial Control System">
+                            <img src="/images/lamp_story.jpg" alt="Industrial Control System">
                         </div>
                     </div>
                 </div>
@@ -715,7 +715,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/medical_device.jpg" alt="Medical Controller">
+                            <img src="/images/lamp_story.jpg" alt="Medical Controller">
                         </div>
                     </div>
                 </div>
@@ -731,7 +731,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/automotive_ecu.jpg" alt="Automotive ECU">
+                            <img src="/images/lamp_story.jpg" alt="Automotive ECU">
                         </div>
                     </div>
                 </div>
