--- a/index.html
+++ b/index.html
@@ -1178,11 +1178,12 @@
                   <!-- Features Right Info Ends -->
                 </div>
                 <!-- Features Image Row Begins -->
-                <div class="row">
+                <div class="row" id="collably">
                   <div
                     class="col-sm-12 ipad-shot-wrapper animated"
                     data-animation="fadeIn"
                     data-animation-delay="600"
+                    
                   >
                     <img
                       src="/images/collably-display.png"
