--- a/mern.html
+++ b/mern.html
@@ -597,7 +597,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
-                <img src="/images/mobile_demo.jpeg" alt="MERN Stack App Mockup">
+                <img src="/images/mern_demo.jpg" alt="MERN Stack App Mockup">
             </div>
         </div>
     </div>
@@ -673,7 +673,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 </div>
             </div>
             <div class="features-image animate-on-scroll">
-                <img src="/images/mobile_dash.jpeg" alt="MERN Stack Dashboard">
+                <img src="/images/mern_dash.jpg" alt="MERN Stack Dashboard">
                 <div class="floating floating-3"></div>
                 <div class="floating floating-4"></div>
             </div>
@@ -699,7 +699,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/mobile_story.jpeg" alt="AppMaster Success Story">
+                            <img src="/images/mern_story.jpg" alt="AppMaster Success Story">
                         </div>
                     </div>
                 </div>
@@ -715,7 +715,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/mobile_story.jpeg" alt="WebGenius Success Story">
+                            <img src="/images/mern_story.jpg" alt="WebGenius Success Story">
                         </div>
                     </div>
                 </div>
@@ -731,7 +731,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/mobile_story.jpeg" alt="SwiftApp Success Story">
+                            <img src="/images/mern_story.jpg" alt="SwiftApp Success Story">
                         </div>
                     </div>
                 </div>
@@ -747,7 +747,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/mobile_story.jpeg" alt="TechMobile Success Story">
+                            <img src="/images/mern_story.jpg" alt="TechMobile Success Story">
                         </div>
                     </div>
                 </div>
