--- a/node.html
+++ b/node.html
@@ -598,7 +598,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore IoT Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
-                <img src="/images/mcu_board.jpg" alt="AVR/PIC Development Board">
+                <img src="/images/lamp_demo.jpg" alt="AVR/PIC Development Board">
             </div>
         </div>
     </div>
@@ -674,7 +674,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 </div>
             </div>
             <div class="features-image animate-on-scroll">
-                <img src="/images/iot_dashboard.jpg" alt="IoT Monitoring Dashboard">
+                <img src="/images/lamp_dash.jpg" alt="IoT Monitoring Dashboard">
                 <div class="floating floating-3"></div>
                 <div class="floating floating-4"></div>
             </div>
@@ -700,7 +700,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/iot_farm.jpg" alt="Smart Agriculture System">
+                            <img src="/images/lamp_story.jpg" alt="Smart Agriculture System">
                         </div>
                     </div>
                 </div>
@@ -716,7 +716,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/iot_industry.jpg" alt="Industrial Monitoring">
+                            <img src="/images/lamp_story.jpg" alt="Industrial Monitoring">
                         </div>
                     </div>
                 </div>
@@ -732,7 +732,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/iot_city.jpg" alt="Smart City Lighting">
+                            <img src="/images/lamp_story.jpg" alt="Smart City Lighting">
                         </div>
                     </div>
                 </div>
