--- a/plc.html
+++ b/plc.html
@@ -683,7 +683,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore PLC Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
-                <img src="/images/plc_system.jpg" alt="PLC Control System">
+                <img src="/images/lamp_demo.jpg" alt="PLC Control System">
             </div>
         </div>
     </div>
@@ -759,7 +759,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 </div>
             </div>
             <div class="features-image animate-on-scroll">
-                <img src="/images/plc_programming.jpg" alt="PLC Programming Interface">
+                <img src="/images/lamp_dash.jpg" alt="PLC Programming Interface">
                 <div class="floating floating-3"></div>
                 <div class="floating floating-4"></div>
             </div>
@@ -785,7 +785,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/factory_automation.jpg" alt="Automated Manufacturing Line">
+                            <img src="/images/lamp_story.jpg" alt="Automated Manufacturing Line">
                         </div>
                     </div>
                 </div>
@@ -801,7 +801,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/energy_management.jpg" alt="Energy Management System">
+                            <img src="/images/lamp_story.jpg" alt="Energy Management System">
                         </div>
                     </div>
                 </div>
@@ -817,7 +817,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/water_treatment.jpg" alt="Water Treatment Plant">
+                            <img src="/images/lamp_story.jpg" alt="Water Treatment Plant">
                         </div>
                     </div>
                 </div>
