--- a/django.html
+++ b/django.html
@@ -596,7 +596,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 <a href="index.html#contact-us" class="btn btn-secondary animate-on-scroll">Explore Solutions</a>
             </div>
             <div class="hero-image animate-on-scroll">
-                <img src="/images/mobile_demo.jpeg" alt="Django App Mockup">
+                <img src="/images/lamp_demo.jpg" alt="Django App Mockup">
             </div>
         </div>
     </div>
@@ -672,7 +672,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                 </div>
             </div>
             <div class="features-image animate-on-scroll">
-                <img src="/images/mobile_dash.jpeg" alt="Django Dashboard">
+                <img src="/images/lamp_dash.jpg" alt="Django Dashboard">
                 <div class="floating floating-3"></div>
                 <div class="floating floating-4"></div>
             </div>
@@ -698,7 +698,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/mobile_story.jpeg" alt="EduTrack Success Story">
+                            <img src="/images/lamp_story.jpg" alt="EduTrack Success Story">
                         </div>
                     </div>
                 </div>
@@ -714,7 +714,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/mobile_story.jpeg" alt="ShopNest Success Story">
+                            <img src="/images/lamp_story.jpg" alt="ShopNest Success Story">
                         </div>
                     </div>
                 </div>
@@ -730,7 +730,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/mobile_story.jpeg" alt="HealthSync Success Story">
+                            <img src="/images/lamp_story.jpg" alt="HealthSync Success Story">
                         </div>
                     </div>
                 </div>
@@ -746,7 +746,7 @@ Empowering businesses with innovative technology – that’s what we do best.
                             </ul>
                         </div>
                         <div class="slide-image">
-                            <img src="/images/mobile_story.jpeg" alt="TravelEase Success Story">
+                            <img src="/images/lamp_story.jpg" alt="TravelEase Success Story">
                         </div>
                     </div>
                 </div>
