--- a/real_estate.html
+++ b/real_estate.html
@@ -715,7 +715,7 @@
                 </div>
             </div>
             <div class="features-image animate-on-scroll">
-                <img src="/images/real_dash.jpeg" alt="Feature Rich Dashboard">
+                <img src="/images/real_dash1.jpg" alt="Feature Rich Dashboard">
                 <div class="floating floating-3"></div>
                 <div class="floating floating-4"></div>
             </div>
